--- a/board.css
+++ b/board.css
@@ -1,3 +1,33 @@
-h1{
-    text-align: center;
+body {
+    padding-top: 1rem;
+    background-color: rgb(202, 196, 196);
+}
+
+label {
+    font-size: large;
+    color: white;
+}
+
+.box {
+    background-color: rgb(0, 0, 0);
+    opacity: 0.5;
+    border-style: ridge;
+    border-width: 3px;
+    border-color: rgb(144, 93, 196);
+    border-radius: 20px;
+}
+
+.mestitle {
+    color: white;
+}
+
+
+.mes {
+    background-color: rgb(0, 0, 0);
+    opacity: 0.5;
+    border-style: ridge;
+    border-width: 3px;
+    border-color: rgb(255, 243, 69);
+    border-radius: 20px;
+    color: white;
 }
