--- a/board.css
+++ b/board.css
@@ -31,3 +31,11 @@ label {
     border-radius: 20px;
     color: white;
 }
+
+.firstname{
+    font-size: 24px;
+}
+.text{
+    font-size: 24px;
+}
+
