--- a/board.css
+++ b/board.css
@@ -39,8 +39,8 @@ label {
     font-size: 24px;
 }
 .conname{
-    font-size: 14cm;
+    font-size: 18px;
 }
 .context{
-    font-size: 14cm;
+    font-size: 18px;
 }
